--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZCG.cshtml
@@ -15,7 +15,7 @@
 <body style="width: 100%; height: 100%;">
     <div id="divTop" class="div_top">
         <div class="div_top_right">
-            
+
         </div>
     </div>
     <div id="divHead" class="div_head">
@@ -24,14 +24,27 @@
             <span class="span_head_left">infotownlet.com</span>
         </div>
     </div>
-    <div class="div_split" id="divSplit">
+    <em class="em_head_split"></em>
+    <div id="divContent" class="div_content">
+        <div class="div_content_tip">
+            <img class="img_content_tip" src="@Url.Content("~/Areas/Business/Css/images/ok.png")" />
+            <span class="span_content_tip">恭喜您，邮箱认证成功!</span>
+        </div>
+        <div class="div_content_tip_info">
+            <span class="span_content_tip_left">用户名：</span>
+            <span class="span_content_tip_right">qgeis_p4</span>
+        </div>
+        <div class="div_content_tip_info">
+            <span class="span_content_tip_left">邮&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
+            <span class="span_content_tip_right">1970402157@qq.com</span><span class="span_content_tip_other">(此邮箱可用于登录) </span>
+        </div>
+        <div class="div_content_tip_info">
+            <span class="span_content_tip_left">你的账户成功获得<span class="span_content_tip_xy">50</span>个信用！</span>
+        </div>
+        <em class="em_head_split" style="margin-top: 250px;"></em>
+        <div class="div_content_tip_bottom">
+            @@infotownlet.com <span class="span_content_tip_bottom">联系客服</span>
+        </div>
     </div>
-<div id="divContent" class="div_content">
-    <div class="div_content_tip">
-        <img class="img_content_tip" src="@Url.Content("~/Areas/Business/Css/images/ok.png")" />
-        <span class="span_content_tip">恭喜您，邮箱认证成功!</span>
-    </div>
-    
-</div>
 </body>
 </html>
