--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
@@ -38,7 +38,7 @@
                     <td class="Info" id="YSJInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="input_content" id="YSJYZM" placeholder="请输入验证码"></td>
+                    <td><input type="text" class="input_content" style="cursor:text;" id="YSJYZM" placeholder="请输入验证码"></td>
                     <td class="Info" id="YSJYZMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
@@ -50,13 +50,13 @@
             <table class="table" style="width: 600px; ">
                 <tr>
                     <td>
-                        <input type="text" id="inputXSJ" class="input_content" style="width: 270px;" placeholder="请输入新手机号">
+                        <input type="text" id="inputXSJ" class="input_content" style="width: 270px;cursor:text;" placeholder="请输入新手机号">
                         <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 116px;" id="btnHQYZM" value="获取验证码" />
                     </td>
                     <td class="Info" id="XSJInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="input_content" id="XSJYZM" placeholder="请输入验证码"></td>
+                    <td><input type="text" class="input_content" style="cursor:text;" id="XSJYZM" placeholder="请输入验证码"></td>
                     <td class="Info" id="XSJYZMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
