--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
@@ -38,7 +38,7 @@
             <table class="table" style="width: 600px;">
                 <tr>
                     <td>
-                        <span>您的邮箱：</span>
+                        <span style="display:inline-block; height:30px;">您的邮箱：</span>
                         <input type="text" id="inputYX" class="input_content" style="width: 316px;" placeholder="请输入电子邮箱">
                     </td>
                     <td class="Info" id="YXInfo" style="width: 50%"></td>
