--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -95,7 +95,7 @@
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_sj" maxlength="30" readonly="readonly" type="text" />
                 <img class="img_person_info" id="img_person_info_sj" />
-                <span class="span_person_info_right" id="span_person_info_right_sj">修改</span>
+                <span class="span_person_info_right" id="span_person_info_right_sj">更换</span>
             </div>
         </div>
 
@@ -106,7 +106,7 @@
             <div class="div_person_info_right">
                 <input class="input_person_info" id="input_person_info_yx" maxlength="30" readonly="readonly" type="text" />
                 <img class="img_person_info" id="img_person_info_yx" />
-                <span class="span_person_info_right" id="span_person_info_right_yx">修改</span>
+                <span class="span_person_info_right" id="span_person_info_right_yx">更换</span>
             </div>
         </div>
     </form>
