--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZCG.cshtml
@@ -27,16 +27,16 @@
     <em class="em_head_split"></em>
     <div id="divContent" class="div_content">
         <div class="div_content_tip">
-            <img class="img_content_tip" src="@Url.Content("~/Areas/Business/Css/images/ok.png")" />
-            <span class="span_content_tip">恭喜您，邮箱认证成功!</span>
+            <img class="img_content_tip" id="img_content_tip" />
+            <span class="span_content_tip" id="span_content_tip"></span>
         </div>
         <div class="div_content_tip_info">
             <span class="span_content_tip_left">用户名：</span>
-            <span class="span_content_tip_right">qgeis_p4</span>
+            <span class="span_content_tip_right" id="span_content_tip_right_yhm"></span>
         </div>
         <div class="div_content_tip_info">
             <span class="span_content_tip_left">邮&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
-            <span class="span_content_tip_right">1970402157@qq.com</span><span class="span_content_tip_other">(此邮箱可用于登录) </span>
+            <span class="span_content_tip_right" id="span_content_tip_right_yx"></span><span class="span_content_tip_other">(此邮箱可用于登录) </span>
         </div>
         <div class="div_content_tip_info">
             <span class="span_content_tip_left">你的账户成功获得<span class="span_content_tip_xy">50</span>个信用！</span>
