--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
@@ -36,69 +36,162 @@
             <em class="emstep" style="width: 510px;"></em>
         </div>
     </div>
-    <div class="div_content">
-        <div class="div_content_info">
-            <div class="div_content_info_left">
-                <span class="img_content_info" id="img_content_info_rzsj"></span>
-                <div class="div_content_info_left_info">
-                    <span class="span_content_info_left">认证手机</span>
-                    <p class="p_content_info">可进行手机号验证以设定认证手机号</p>
+    <div id="div_GRLRZ" style="display: block">
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_rlrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">人脸认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;请在明亮地方认证</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;简单便捷、实时通过</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="div_content_info_right">
-                <span class="span_content_info_right" id="span_content_info_right_rzsj">换绑</span>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_rzsj">去认证</span>
+                </div>
             </div>
         </div>
-        <div class="div_content_info">
-            <div class="div_content_info_left">
-                <span class="img_content_info" id="img_content_info_yxbd"></span>
-                <div class="div_content_info_left_info">
-                    <span class="span_content_info_left">邮箱绑定</span>
-                    <p class="p_content_info">可使用绑定邮箱直接登录信息小镇</p>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_zmsmrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">芝麻实名认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;适合有支付宝的用户</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;无需拍照、实时通过</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="div_content_info_right">
-                <span class="span_content_info_right" id="span_content_info_right_yxbd">换绑</span>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_zmsmrz">去认证</span>
+                </div>
             </div>
         </div>
-        <em class="em_content_info"></em>
-        <div class="div_content_info">
-            <div class="div_content_info_left">
-                <span class="img_content_info" id="img_content_info_qqbd"></span>
-                <div class="div_content_info_left_info">
-                    <span class="span_content_info_left">QQ绑定</span>
-                    <p class="p_content_info">可使用QQ账号直接登录信息小镇<br/>分享信息至Qzone
-                    </p>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_scsfzrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">手持身份证认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;需清晰的手持身份证照片</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;3-5个工作日完成认证</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="div_content_info_right">
-                <span class="span_content_info_right" id="span_content_info_right_qqbd">换绑</span>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_scsfzrz">去认证</span>
+                </div>
             </div>
         </div>
-        <div class="div_content_info">
-            <div class="div_content_info_left">
-                <span class="img_content_info" id="img_content_info_xlwb"></span>
-                <div class="div_content_info_left_info">
-                    <span class="span_content_info_left">新浪微博</span>
-                    <p class="p_content_info">可使用微博账号直接登录信息小镇<br/>发布时分享信息至微博
-                    </p>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_grsfrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">个人身份认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;被误判为商家、中介</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;可在此申请个人认证</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="div_content_info_right">
-                <span class="span_content_info_right" id="span_content_info_right_xlwb">换绑</span>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_grsfrz">去认证</span>
+                </div>
             </div>
         </div>
-        <div class="div_content_info">
-            <div class="div_content_info_left">
-                <span class="img_content_info" id="img_content_info_wxbd"></span>
-                <div class="div_content_info_left_info">
-                    <span class="span_content_info_left">微信绑定</span>
-                    <p class="p_content_info">可使用微信账号直接登录信息小镇<br/>发布时分享信息至微信朋友圈和微信好友
-                    </p>
+    </div>
+    <div id="div_QYLRZ" style="display: none">
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_yyzzfrrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">营业执照法人认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;需要企业法人认证</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;实时通过</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_yyzzfrrz">去认证</span>
                 </div>
             </div>
-            <div class="div_content_info_right">
-                <span class="span_content_info_right" id="span_content_info_right_wxbd">换绑</span>
+        </div>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_dgzhrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">对公账号认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;给对公账号打款认证</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;认证周期7个工作日</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_dgzhrz">去认证</span>
+                </div>
+            </div>
+        </div>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_yyzzdsfrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">营业执照第三方认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;需上传清晰营业执照照片</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;实时通过</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_yyzzdsfrz">去认证</span>
+                </div>
+            </div>
+        </div>
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_yyzzptrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">营业执照普通认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;需上传清晰营业执照照片</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;3-5个工作日完成</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_yyzzptrz">去认证</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="div_QTRZ" style="display: none">
+        <div class="div_content">
+            <div class="div_content_info">
+                <div class="div_content_info_left">
+                    <span class="img_content_info" id="img_content_info_qtrz"></span>
+                    <div class="div_content_info_left_info">
+                        <span class="span_content_info_left">其它认证</span>
+                        <ul class="ul_content_info">
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;包含各类企业许可证</li>
+                            <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;认证时间较长</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="div_content_info_right">
+                    <span class="span_content_info_right" id="span_content_info_right_qtrz">去认证</span>
+                </div>
             </div>
         </div>
     </div>
