--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/ZHBD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/ZHBD.cshtml
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_rzsj">换绑</span>
+                    <span class="span_content_info_right_hb" id="span_content_info_right_rzsj">换绑</span>
                 </div>
             </div>
             <div class="div_content_info">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_yxbd">换绑</span>
+                    <span class="span_content_info_right_hb" id="span_content_info_right_yxbd">换绑</span>
                 </div>
             </div>
             <em class="em_content_info"></em>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_qqbd">换绑</span>
+                    <span class="span_content_info_right_ljbd" id="span_content_info_right_qqbd">立即绑定</span>
                 </div>
             </div>
             <div class="div_content_info">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_xlwb">换绑</span>
+                    <span class="span_content_info_right_ljbd" id="span_content_info_right_xlwb">立即绑定</span>
                 </div>
             </div>
             <div class="div_content_info">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="div_content_info_right">
-                    <span class="span_content_info_right" id="span_content_info_right_wxbd">换绑</span>
+                    <span class="span_content_info_right_ljbd" id="span_content_info_right_wxbd">立即绑定</span>
                 </div>
             </div>
         </div>
