--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -65,7 +65,7 @@
                 <li id="li_left_menu_SDJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanSDJL">收到简历</span></li>
                 <li id="li_left_menu_TJJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanTJJL">推荐简历</span></li>
                 <li id="li_left_menu_YXZJL" class="li_left_menu"><span class="span_left_menu_four JLGL_child" id="spanYXZJL" style="margin-left: 35px">已下载简历</span></li>
-                <li id="li_left_menu_FSMSYQ" class="li_left_menu" style="width:150px"><span id="spanFSMSYQ" class="span_left_menu_four JLGL_child" style="margin-left: 40px">发送的面试邀请</span></li>
+                <li id="li_left_menu_FSMSYQ" class="li_left_menu" style="width: 150px"><span id="spanFSMSYQ" class="span_left_menu_four JLGL_child" style="margin-left: 40px">发送的面试邀请</span></li>
                 <li id="li_left_menu_ZHXX" class="li_left_menu"><img id="imgZHXX" class="img_left_menu_third" /><span id="spanZHXX" class="span_left_menu_third WDZP_child">账号信息</span></li>
                 <li id="li_left_menu_GSZL" class="li_left_menu"><span id="spanGSZL" class="span_left_menu_four ZHXX_child">公司资料</span></li>
                 <li id="li_left_menu_KHFW" class="li_left_menu"><span class="span_left_menu_second" id="spanKHFW">客户服务</span></li>
@@ -97,6 +97,13 @@
         </div>
         <div id="divRightContent" style="height: 100%; width: 900px; float: left; margin-left: 10px;">
             <iframe id="iframeright" style="border: none; width: 100%; height: 100%"></iframe>
+        </div>
+    </div>
+    <div class="shadow" id="shadow"></div>
+    <div class="editImgWindow" id="editImgWindow" style="display: none">
+        <div class="topbar">
+            <span class="span_close" id="span_close"></span>
+            <span class ="span_toolbar">一键绑定QQ，即可通过QQ快速登录</span>
         </div>
     </div>
 </body>
