--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/ZHBD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/ZHBD.cshtml
@@ -17,70 +17,78 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 </head>
 <body>
-    <form action="" enctype="multipart/form-data" id="form_button_main_photo" method="post">
-        <div class="div_content">
-            <div class="div_content_info">
-                <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_rzsj"></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">认证手机</span>
-                        <p class="p_content_info">可进行手机号验证以设定认证手机号</p>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right_hb" id="span_content_info_right_rzsj">换绑</span>
+    <div class="div_content">
+        <div class="div_content_info">
+            <div class="div_content_info_left">
+                <span class="img_content_info" id="img_content_info_rzsj"></span>
+                <div class="div_content_info_left_info">
+                    <span class="span_content_info_left">认证手机</span>
+                    <p class="p_content_info">可进行手机号验证以设定认证手机号</p>
                 </div>
             </div>
-            <div class="div_content_info">
-                <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_yxbd" ></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">邮箱绑定</span>
-                        <p class="p_content_info">可使用绑定邮箱直接登录信息小镇</p>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right_hb" id="span_content_info_right_yxbd">换绑</span>
-                </div>
-            </div>
-            <em class="em_content_info"></em>
-            <div class="div_content_info">
-                <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_qqbd"></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">QQ绑定</span>
-                        <p class="p_content_info">可使用QQ账号直接登录信息小镇<br />分享信息至Qzone</p>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right_ljbd" id="span_content_info_right_qqbd">立即绑定</span>
-                </div>
-            </div>
-            <div class="div_content_info">
-                <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_xlwb"></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">新浪微博</span>
-                        <p class="p_content_info">可使用微博账号直接登录信息小镇<br />发布时分享信息至微博</p>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right_ljbd" id="span_content_info_right_xlwb">立即绑定</span>
-                </div>
-            </div>
-            <div class="div_content_info">
-                <div class="div_content_info_left">
-                    <span class="img_content_info" id="img_content_info_wxbd"></span>
-                    <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">微信绑定</span>
-                        <p class="p_content_info">可使用微信账号直接登录信息小镇<br/>发布时分享信息至微信朋友圈和微信好友</p>
-                    </div>
-                </div>
-                <div class="div_content_info_right">
-                    <span class="span_content_info_right_ljbd" id="span_content_info_right_wxbd">立即绑定</span>
-                </div>
+            <div class="div_content_info_right">
+                <span class="span_content_info_right_hb" id="span_content_info_right_rzsj">换绑</span>
             </div>
         </div>
-    </form>
+        <div class="div_content_info">
+            <div class="div_content_info_left">
+                <span class="img_content_info" id="img_content_info_yxbd"></span>
+                <div class="div_content_info_left_info">
+                    <span class="span_content_info_left">邮箱绑定</span>
+                    <p class="p_content_info">可使用绑定邮箱直接登录信息小镇</p>
+                </div>
+            </div>
+            <div class="div_content_info_right">
+                <span class="span_content_info_right_ljbd" id="span_content_info_right_yxbd">立即绑定</span>
+                <span class="span_content_info_right_hb" id="span_content_info_right_yxhd">换绑</span>
+            </div>
+        </div>
+        <em class="em_content_info"></em>
+        <div class="div_content_info">
+            <div class="div_content_info_left">
+                <span class="img_content_info" id="img_content_info_qqbd"></span>
+                <div class="div_content_info_left_info">
+                    <span class="span_content_info_left">QQ绑定</span>
+                    <p class="p_content_info">
+                        可使用QQ账号直接登录信息小镇<br />分享信息至Qzone
+                    </p>
+                </div>
+            </div>
+            <div class="div_content_info_right">
+                <span class="span_content_info_right_ljbd" id="span_content_info_right_qqbd">立即绑定</span>
+                <span class="span_content_info_right_hb" id="span_content_info_right_qqjb">解绑</span>
+            </div>
+        </div>
+        <div class="div_content_info">
+            <div class="div_content_info_left">
+                <span class="img_content_info" id="img_content_info_xlwb"></span>
+                <div class="div_content_info_left_info">
+                    <span class="span_content_info_left">新浪微博</span>
+                    <p class="p_content_info">
+                        可使用微博账号直接登录信息小镇<br />发布时分享信息至微博
+                    </p>
+                </div>
+            </div>
+            <div class="div_content_info_right">
+                <span class="span_content_info_right_ljbd" id="span_content_info_right_xlwb">立即绑定</span>
+                <span class="span_content_info_right_hb" id="span_content_info_right_wbjb">解绑</span>
+            </div>
+        </div>
+        <div class="div_content_info">
+            <div class="div_content_info_left">
+                <span class="img_content_info" id="img_content_info_wxbd"></span>
+                <div class="div_content_info_left_info">
+                    <span class="span_content_info_left">微信绑定</span>
+                    <p class="p_content_info">
+                        可使用微信账号直接登录信息小镇<br />发布时分享信息至微信朋友圈和微信好友
+                    </p>
+                </div>
+            </div>
+            <div class="div_content_info_right">
+                <span class="span_content_info_right_ljbd" id="span_content_info_right_wxbd">立即绑定</span>
+                <span class="span_content_info_right_hb" id="span_content_info_right_wxjb">解绑</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
