--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -99,11 +99,27 @@
             <iframe id="iframeright" style="border: none; width: 100%; height: 100%"></iframe>
         </div>
     </div>
-    <div class="shadow" id="shadow"></div>
-    <div class="editImgWindow" id="editImgWindow" style="display: none">
-        <div class="topbar">
+    <div class="div_shadow" id="shadow"></div>
+    <div class="div_editImgWindow" id="editImgWindow" style="display: none">
+        <div class="div_topbar">
             <span class="span_close" id="span_close"></span>
-            <span class ="span_toolbar">一键绑定QQ，即可通过QQ快速登录</span>
+            <span class="span_toolbar">一键绑定QQ，即可通过QQ快速登录</span>
+        </div>
+        <div class="div_body">
+            <div class="div_body_title">快速安全登录</div>
+            <div class="div_body_tip">请使用QQ手机版扫描二维码，<br/>或点击头像授权登录。</div>
+            <div class="div_body_image">
+                <span class="span_body_image" id="span_body_qrcode"></span>
+                <div class="div_body_image_qqtx" id="div_body_image_qqtx">
+                    <span class="span_body_image" id="span_body_qqtx"></span>
+                    <div class='toolbar_wrap'>
+                        <div class='opacity'></div>
+                        <div class='toolbar'>
+                            980381266
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
