--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -107,16 +107,16 @@
         </div>
         <div class="div_body">
             <div class="div_body_title">快速安全登录</div>
-            <div class="div_body_tip">请使用QQ手机版扫描二维码，<br/>或点击头像授权登录。</div>
+            <div class="div_body_tip">请使用QQ手机版扫描二维码，<br />或点击头像授权登录。</div>
             <div class="div_body_image">
-                <span class="span_body_image" id="span_body_qrcode"></span>
+                <div class="div_body_image_qqtx" id="div_body_image_qrcode">
+                    <span class="span_body_image" id="span_body_qrcode"></span>
+                </div>
                 <div class="div_body_image_qqtx" id="div_body_image_qqtx">
                     <span class="span_body_image" id="span_body_qqtx"></span>
                     <div class='toolbar_wrap'>
                         <div class='opacity'></div>
-                        <div class='toolbar'>
-                            980381266
-                        </div>
+                        <div class='toolbar'>980381266</div>
                     </div>
                 </div>
             </div>
