--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHBD/ZHBD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHBD/ZHBD.css
@@ -64,6 +64,7 @@
     display: block;
     float: right;
     width: 450px;
+    position: relative;
 }
 
 .span_content_info_right_hb {
@@ -78,6 +79,7 @@
     color: #ffffff;
     text-align: center;
     padding-top: 4px;
+    position: absolute;
 }
 
 .span_content_info_right_hb:hover {
@@ -96,6 +98,7 @@
     color: #ffffff;
     text-align: center;
     padding-top: 4px;
+    position: absolute;
 }
 
 .span_content_info_right_ljbd:hover {
