--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -43,10 +43,8 @@
                     <div class="div_main_photo_button">
                         <input class="button_main_photo" id="btnTBWXTX" type="button" value="同步微信头像" />
                         <div class="div_button_main_photo">
-                            <div class="div_button_main_photo_child">上传本地头像</div>
-
+                            <div class="div_button_main_photo_child" id="div_button_main_photo_child">上传本地头像</div>
                             <input class="button_main_photo button_main_photo_upload" id="btnBDSC" type="file" unselectable="on" />
-
                         </div>
                         <input class="button_main_photo" id="btnXTSC" type="button" value="上传系统头像" />
                     </div>
