--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
@@ -20,9 +20,9 @@
     <div class="div_content">
         <div class="div_head">
             <span class="span_head_left"></span>
-            <span class="span_head_right span_head_right_cursor">二维码登录</span>
+            <span class="span_head_right span_head_right_cursor" id="span_head_right_ewmdl">二维码登录</span>
             <span class="span_head_right">|</span>
-            <span class="span_head_right span_head_right_cursor">注册</span>
+            <span class="span_head_right span_head_right_cursor" id="span_head_right_zc">注册</span>
         </div>
         <div class="div_body">
             <div class="div_body_title">使用你的微博帐号访问 <span class="div_body_href">信息小镇</span> ，并同时登录微博</div>
@@ -46,8 +46,8 @@
             </div>
             <div class="div_body_split"></div>
             <div class="div_body_bottom">
-                <input class="input_bottom" type="button" value="取消"/>
-                <input class="input_bottom" type="button" value="登录" />
+                <input class="input_bottom" id="input_bottom_qx" type="button" value="取消" />
+                <input class="input_bottom" id="input_bottom_dl" type="button" value="登录" />
             </div>
         </div>
     </div>
