--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
@@ -9,12 +9,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-
     <link href="@Url.Content("~/Areas/Business/Css/ZHBD/WBBD.css")" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ZHBD/WBBD.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 </head>
 <body class="body">
     <div class="div_content">
@@ -31,14 +27,14 @@
                     <tr class="tr_div_body">
                         <td class="td_div_body">
                             <span style="display: inline-block; height: 30px;">账&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
-                            <input type="text" id="inputZH" class="input_content" style="width: 316px;" placeholder="请输入账号">
+                            <input type="text" id="inputZH" class="input_content" placeholder="请输入账号">
                         </td>
                         <td class="Info" id="ZHInfo" style="width: 50%"></td>
                     </tr>
                     <tr class="tr_div_body">
                         <td class="td_div_body">
                             <span style="display:inline-block; height:30px;">密&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
-                            <input type="text" id="inputMM" class="input_content" style="width: 316px;" placeholder="请输入密码">
+                            <input type="text" id="inputMM" class="input_content" placeholder="请输入密码">
                         </td>
                         <td class="Info" id="MMInfo" style="width: 50%"></td>
                     </tr>
