--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHBD/WBBD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHBD/WBBD.css
@@ -92,7 +92,7 @@
 }
 
 .input_content {
-    width: 280px;
+    width: 250px;
     cursor: default;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -101,6 +101,11 @@
     display: inline-block;
     cursor: text;
 }
+
+    :-ms-input-placeholder.input_content {
+        color: #999;
+    }
+
 
 .div_body_split {
     width: 560px;
@@ -138,4 +143,20 @@
     font-family: 微软雅黑 !important;
     vertical-align: middle !important;
     text-align: left !important;
+}
+
+.tooltip-inner {
+    max-width: 330px !important;
+    background-color: #fff;
+    border: 1px solid #f00;
+    color: #000;
+}
+
+.li_div_body {
+    text-align:left; 
+    display:block; 
+    color:#f00; 
+    width:110px; 
+    height:20px;
+    margin-top: 3px;
 }
