密码设置页面完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHBD/WBBD.cshtml
@@ -42,7 +42,7 @@
             </div>
             <div class="div_body_split"></div>
             <div class="div_body_bottom">
-                <input class="input_bottom" id="input_bottom_qx" type="button" value="返回" />
+                <input class="input_bottom" id="input_bottom_fh" type="button" value="返回" />
                 <input class="input_bottom" id="input_bottom_dl" type="button" value="登录" />
             </div>
         </div>
