--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHMM.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZHMM.css
@@ -1,22 +1,50 @@
-﻿
-.zhmm_divstep {
-    width: 130px;
+﻿.div_head {
+    width: 900px; 
     text-align: center;
-    height: 30px;
+    height: 48px;
+}
+
+.div_head_inner {
+    width: 600px;
+    margin-left: 16%;
+}
+
+.divstep {
+    width: 196px;
+    text-align: center;
+    height: 48px;
     float: left;
     cursor: default;
 }
 
-.zhmm_spanstep {
-    font-size: 18px;
+.spanstep {
+    font-size: 14px;
     margin-bottom: 5px;
     line-height: 40px;
     color: #cccccc;
 }
 
-.zhmm_emstep {
-    width: 130px;
+.emstep {
+    width: 196px;
     height: 2px;
     float: left;
     background: #cccccc;
+}
+
+.div_content {
+    width: 900px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.table {
+    margin-left: 26%;
+}
+
+.table tr {
+    height: 40px;
+}
+
+.table tr td {
+    vertical-align: middle !important;
 }
