--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -11,27 +11,19 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ZHMM.js")"></script>
 </head>
 <body>
-    <div>
-        <table class="table" style="width: 600px;">
-            <tr>
-                <td class="headtd">
-                    <div style="width: 432px;">
-                        <div class="zhmm_divstep" id="divQRZH">
-                            <span class="zhmm_spanstep" id="spanQRZH">确认账户</span>
-                            <em class="zhmm_emstep" id="emQRZH"></em>
-                        </div>
-                        <div class="zhmm_divstep" id="divYZZH">
-                            <span class="zhmm_spanstep" id="spanYZZH">验证账户</span>
-                            <em class="zhmm_emstep" id="emYZZH"></em>
-                        </div>
-                        <div class="zhmm_divstep" id="divCZMM">
-                            <span class="zhmm_spanstep" id="spanCZMM">重置密码</span>
-                            <em class="zhmm_emstep" id="emCZMM"></em>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        </table>
+    <div class="div_head_inner">
+        <div class="divstep" id="divQRZH">
+            <span class="spanstep" id="spanQRZH">确认账户</span>
+            <em class="emstep" id="emQRZH"></em>
+        </div>
+        <div class="divstep" id="divYZZH">
+            <span class="spanstep" id="spanYZZH">验证账户</span>
+            <em class="emstep" id="emYZZH"></em>
+        </div>
+        <div class="divstep" id="divCZMM">
+            <span class="spanstep" id="spanCZMM">重置密码</span>
+            <em class="emstep" id="emCZMM"></em>
+        </div>
     </div>
     <div id="myTabContent" class="tab-content">
         <div id="divFirst" style="display: block">
